<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101828"
    tools:context=".Screen.SetWallpaper.SetWallpaperActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cst_Title_Banner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_bg_phu"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cst_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgBackT"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle_hdwallpaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:fontFamily="@font/angkor_regular"
                android:text="@string/set_wallpapers"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpage2SetWallpaper"
            android:layout_width="match_parent"
            android:layout_height="388dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cst_Title"/>

<!--        <LinearLayout-->
<!--            android:id="@+id/custom_dots_indicator"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:orientation="horizontal"-->
<!--            android:layout_marginTop="20dp"-->
<!--            app:layout_constraintLeft_toLeftOf="parent"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/viewpage2SetWallpaper" />-->

        <LinearLayout
            android:id="@+id/custom_dots_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewpage2SetWallpaper">

            <ImageView
                android:id="@+id/dot1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:src="@drawable/dot_selected" />

            <ImageView
                android:id="@+id/dot2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:src="@drawable/dot_unselected" />

            <ImageView
                android:id="@+id/dot3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:src="@drawable/dot_unselected" />


        </LinearLayout>

        <TextView
            android:id="@+id/tvSwipe_to_see_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/plusjakartasans_regular"
            android:text="@string/swipe_to_see_more"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/custom_dots_indicator" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSetWallpaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:background="@drawable/custom_button_set_wallpaper"
            android:fontFamily="@font/plusjakartasans_bold"
            android:text="@string/set_wallpaper"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textAllCaps="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSwipe_to_see_more" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>