<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101828"
    tools:context=".Screen.Home.HomeActivity">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_bg_phu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp">

                <ImageView
                    android:id="@+id/img_menu"
                    android:layout_width="24dp"
                    android:layout_height="24dp"

                    android:src="@drawable/ic_menu"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtToolBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"

                    android:fontFamily="@font/angkor_regular"
                    android:text="Transparent Wallpaper"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_menu"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardTransparentWallpaper"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/ic_bo_image"
                    android:padding="2dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="16dp"
                    app:layout_constraintDimensionRatio="H,16:9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_transparent_wallpaper" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="20dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textOverlay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/plusjakartasans_bold"
                            android:lineSpacingExtra="10dp"
                            android:breakStrategy="simple"
                            android:text="@string/transparent_wallpaper"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="18sp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/buttonOverlay"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="16dp"
                            android:paddingEnd="15dp"
                            android:paddingStart="15dp"
                            android:paddingBottom="3dp"
                            android:background="@drawable/custom_btn_explore"
                            android:fontFamily="@font/plusjakartasans_bold"
                            android:text="@string/Explore"
                            android:textColor="#ffffff"
                            android:textSize="16sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="208dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/cardTransparentWallpaper">
                    <FrameLayout
                        android:id="@+id/layout1"
                        android:layout_width="0dp"
                        android:layout_height="212dp"
                        android:padding="4dp"
                        app:layout_constraintEnd_toStartOf="@id/layout2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:background="@drawable/img_khung_01"
                                android:gravity="center"
                                android:orientation="vertical"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_message" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/plusjakartasans_regular"
                                    android:text="@string/typing_wallpaper"
                                    android:textAlignment="center"
                                    android:textColor="@color/white" />
                            </LinearLayout>
                        </androidx.constraintlayout.widget.ConstraintLayout>



                    </FrameLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:orientation="vertical"
                        app:layout_constraintStart_toEndOf="@id/layout1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="100dp"
                                android:layout_gravity="center"
                                android:layout_margin="1dp"
                                android:scaleType="centerInside"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@drawable/img_khung_02"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_mirror_wallpapaer" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/plusjakartasans_regular"
                                    android:text="@string/mirror_wallpaper"
                                    android:textAlignment="center"
                                    android:textColor="@color/white" />
                            </LinearLayout>
                        </FrameLayout>


                        <FrameLayout
                            android:id="@+id/hdWallPaper"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:layout_gravity="center"
                                android:scaleType="centerInside"
                                android:src="@drawable/img_bgr_item_homenho" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:background="@drawable/img_khung_02"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_hd_walllpaper" />

                                <TextView
                                    android:layout_width="150dp"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/plusjakartasans_regular"
                                    android:text="@string/hd_wallpapers"
                                    android:textAlignment="center"
                                    android:textColor="@color/white" />
                            </LinearLayout>
                        </FrameLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:id="@+id/frameLayoutMainn"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#1C2530"
            app:headerLayout="@layout/item_header_menu"
            app:itemIconTint="#009688"
            app:itemTextColor="@color/white"
            app:menu="@menu/activity_main_drawer">

            <TextView
                android:id="@+id/txtVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginStart="80dp"
                android:layout_marginBottom="64dp"
                android:textColor="#787B82" />
        </com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
